# qlue-ui

./: .dockerignore  .env.dist  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  README.md  config.default.yaml  db.sqlite3.dist  docker-compose.yaml  entrypoint.sh  renovate.json
backend/: .gitignore  README.md  config.yaml  pyproject.toml
backend/api/: admin.py  models.py  serializer.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_sparqlendpointconfiguration_sort_key_and_more.py  0003_queryexample.py  0004_rename_object_completion_query_context_insensitive_sparqlendpointconfiguration_object_completion_con.py  0005_savedquery_sparqlendpointconfiguration_engine.py  0006_alter_sparqlendpointconfiguration_engine.py  0007_comparegroup.py  0007_sparqlendpointconfiguration_hover.py  0008_sparqlendpointconfiguration_map_view_url.py  0009_alter_sparqlendpointconfiguration_prefixes.py  0010_sparqlendpointconfiguration_values_completion_context_insensitive_and_more.py  0011_alter_sparqlendpointconfiguration_hover_and_more.py  0012_merge_20260322_2000.py
backend/configuration/: settings.py
backend/dumper/: main.py  pyproject.toml
backend/examples/dblp/: Affiliations by conference (using SERVICE).rq  All papers in DBLP until 1940.rq  All predicates, ordered by number of subjects.rq  All types, sorted by their frequency.rq  Author names matching REGEX.rq  Average number of authors by year.rq  Birth place of all persons with a Wikidata link (using SERVICE).rq  (+3 more)
backend/src/: banner.txt  config_store.py  database.py  main.py  models.py  query_store.py
(+221 files in other folders)
