[project]
name = "qlue-ui-backend"
version = "0.1.0"
description = "Backend API for QLue-UI"
requires-python = ">3.10"
dependencies = [
    "fastapi[standard]==0.135.3",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "watchdog==6.0.0",
]

[tool.setuptools.package-data]
api = ["banner.txt"]
