[project]
name = "qlever-ui-backend"
version = "0.2.3"
description = "Backend API for Qlever-UI"
requires-python = ">3.10"
dependencies = [
    "fastapi[standard]==0.135.3",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "watchdog==6.0.0",
]

[tool.setuptools.package-data]
api = ["banner.txt"]
